# bubble

./: README.md
src/: index.html  main.js  style.css  styles.css
src-tauri/: Cargo.toml  bubble.toml  tauri.conf.json  zenoh.json5
src-tauri/src/: cli.rs  conf.rs  lib.rs  main.rs
