[package]
name = "bubble"
version = "0.1.0"
description = "Bubble - makes dialogue with small rooms"
authors = ["Izumi Ono"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zenoh = "0.11.0"
anyhow = "1.0.89"
rmp-serde = "1.3.0"
toml = "0.8.19"
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
flume = "0.11.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
